# my_cripto_project

./: .gitignore  README.md  Untitled.ipynb  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci-cd.yml
data/bronze/train/: .gitignore
data/raw/: .gitignore  test.parquet.dvc  train.parquet.dvc
docker/: docker-compose.yml
docker/jupyter/: Dockerfile
docker/minio/: Dockerfile
docker/mlruns/: mlflow.db
docker/spark/: Dockerfile
pipelines/: bronze.py
